--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,5 +1,5 @@
 <footer class="footer">
-  <div class="flex justify-center pt-6 mx-auto max-w-7xl w-11/12">
+  <div class="flex justify-center lg:pt-24 pt-48 mx-auto max-w-7xl w-11/12">
     <div class="flex flex-col">
       <div class="flex lg:flex-row flex-col lg:gap-80 gap-20 justify-between">
         <div class="flex items-center">
