--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -45,14 +45,25 @@ import Footer from "../components/Footer.astro";
     body.light-mode {
       --color-background: white;
       --color-text: black;
-      text {
-        fill: #000000;
-      }
     }
 
     body.dark-mode {
       --color-background: black;
       --color-text: rgb(244, 231, 212);
+    }
+
+    ::-webkit-scrollbar {
+      width: 12px;
+      height: 12px;
+    }
+
+    ::-webkit-scrollbar-thumb {
+      background-color: rgb(244, 231, 212);
+      border-radius: 6px;
+    }
+
+    ::-webkit-scrollbar-track {
+      background-color: transparent;
     }
 
     html {
